fix profile instructor page
